--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 
     <modules>
         <module>spring-boot-jpa</module>
+        <module>spring-boot-redis</module>
     </modules>
 
     <parent>
@@ -48,6 +49,12 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <skipTests>true</skipTests>
+                </configuration>
             </plugin>
         </plugins>
     </build>
