--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <modules>
         <module>spring-boot-jpa</module>
         <module>spring-boot-redis</module>
+        <module>spring-boot-websocket</module>
     </modules>
 
     <parent>
