--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
         <module>spring-boot-jpa</module>
         <module>spring-boot-redis</module>
         <module>spring-boot-websocket</module>
+        <module>spring-boot-rabbitmq</module>
     </modules>
 
     <parent>
