--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
         <module>spring-boot-redis</module>
         <module>spring-boot-websocket</module>
         <module>spring-boot-rabbitmq</module>
+        <module>spring-boot-elasticsearch</module>
     </modules>
 
     <parent>
