--- a/spring-boot-elasticsearch/src/main/resources/application.properties
+++ b/spring-boot-elasticsearch/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=9004
 
 # es
-spring.data.elasticsearch.cluster-name=docker-cluster
-spring.data.elasticsearch.cluster-nodes=127.0.0.1:9300
-spring.data.elasticsearch.repositories.enabled=true
+elastic.host=127.0.0.1
+elastic.port=9200
+elastic.username=
+elastic.password=
